Fix relative paths for Webpack 5

--- a/plugins/balloonpanel/skins/moono/balloonpanel.css
+++ b/plugins/balloonpanel/skins/moono/balloonpanel.css
@@ -59,7 +59,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 /* The close button at the top of the panel. */
 a.cke_balloon_close_button
 {
-	background-image: url(images/close.png);
+	background-image: url(./images/close.png);
 	background-repeat: no-repeat;
 	background-position: 50%;
 	position: absolute;
@@ -87,7 +87,7 @@ a.cke_balloon_close_button
 
 .cke_hidpi .cke_balloon_close_button
 {
-	background-image: url(images/hidpi/close.png);
+	background-image: url(./images/hidpi/close.png);
 	background-size: 16px;
 }
 
