--- a/skins/moono/dialog_ie8.css
+++ b/skins/moono/dialog_ie8.css
@@ -11,7 +11,7 @@ This file contains styles to used by Internet Explorer 8 only.
 */
 
 /* Base it on dialog_ie.css, overriding it with styles defined in this file. */
-@import url("dialog_ie.css");
+@import url("./dialog_ie.css");
 
 /* 	Without the following, IE8 cannot compensate footer button thick borders
 	on :focus/:active. */
