--- a/plugins/balloonpanel/skins/moono-lisa/balloonpanel.css
+++ b/plugins/balloonpanel/skins/moono-lisa/balloonpanel.css
@@ -28,7 +28,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 /* The close button at the top of the panel. */
 a.cke_balloon_close_button
 {
-	background-image: url(images/close.png);
+	background-image: url(./images/close.png);
 	background-repeat: no-repeat;
 	background-position: 50% -1px;
 	position: absolute;
@@ -73,7 +73,7 @@ a.cke_balloon_close_button:active
 
 .cke_hidpi .cke_balloon_close_button
 {
-	background-image: url(images/hidpi/close.png);
+	background-image: url(./images/hidpi/close.png);
 	background-size: 16px;
 }
 
