--- a/skins/kama/dialog_iequirks.css
+++ b/skins/kama/dialog_iequirks.css
@@ -12,7 +12,7 @@ in Quirks mode only.
 */
 
 /* Base it on dialog_ie.css, overriding it with styles defined in this file. */
-@import url("dialog_ie.css");
+@import url("./dialog_ie.css");
 
 .cke_dialog_title
 {
@@ -33,7 +33,7 @@ in Quirks mode only.
 .cke_dialog_close_button
 {
 	top: 27px;
-	background-image: url(images/sprites_ie6.png);
+	background-image: url(./images/sprites_ie6.png);
 }
 
 .cke_dialog_footer .cke_resizer
