--- a/skins/kama/menu.css
+++ b/skins/kama/menu.css
@@ -186,7 +186,7 @@ Special outer level classes used in this file:
 .cke_menuarrow
 {
 	/* arrowright.gif*/
-	background-image: url(images/sprites.png);
+	background-image: url(./images/sprites.png);
 	background-position: 0 -1400px;
 	background-repeat: no-repeat;
 	padding: 0 5px;
@@ -195,7 +195,7 @@ Special outer level classes used in this file:
 .cke_rtl .cke_menuarrow
 {
 	/* arrowleft.gif*/
-	background-image: url(images/sprites.png);
+	background-image: url(./images/sprites.png);
 	background-position: 7px -1380px;
 	background-repeat: no-repeat;
 }
