--- a/skins/kama/richcombo.css
+++ b/skins/kama/richcombo.css
@@ -61,7 +61,7 @@ a.cke_combo_button
 {
 	display: inline-block;
 	border-radius: 5px;
-	background: url(images/sprites.png) 0 -100px repeat-x;	/* For backwards compatibility. */
+	background: url(./images/sprites.png) 0 -100px repeat-x;	/* For backwards compatibility. */
 	float: left;
 	padding: 2px 4px 2px 6px;
 	height: 22px;
@@ -84,7 +84,7 @@ a.cke_combo_button
 
 	.cke_combo_off .cke_combo_button:hover
 	{
-		background: url(images/sprites.png) 0 -100px repeat-x;	/* For backwards compatibility. */
+		background: url(./images/sprites.png) 0 -100px repeat-x;	/* For backwards compatibility. */
 		background: linear-gradient(to top, #fff, #d3d3d3 100px);
 	}
 
