--- a/skins/moono-lisa/editor_ie.css
+++ b/skins/moono-lisa/editor_ie.css
@@ -11,7 +11,7 @@ This file contains styles to used by all versions of Internet Explorer only.
 */
 
 /* Base it on editor.css, overriding it with styles defined in this file. */
-@import url("editor.css");
+@import url("./editor.css");
 
 a.cke_button_disabled,
 
