--- a/skins/moono/dialog_ie7.css
+++ b/skins/moono/dialog_ie7.css
@@ -11,7 +11,7 @@ This file contains styles to used by Internet Explorer 7 only.
 */
 
 /* Base it on dialog_ie.css, overriding it with styles defined in this file. */
-@import url("dialog_ie.css");
+@import url("./dialog_ie.css");
 
 .cke_dialog_title
 {
